# weatherScript

./: README.md  README.rst  config.ini  pyproject.toml
weatherScript/: __init__.py  weatherScript.py
weatherscript/: __init__.py  weatherScript.py
